content and new navigation
changes

--- a/about.html
+++ b/about.html
@@ -62,31 +62,18 @@
               <div class="navicon">
                 <div class="menu-container">
 
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                     	<ul id="nav-menu">
-                         <li><a href="index.html">Home</a></li>
-                       	 <li><a href="about.html">About</a></li>
-                       	 <li><a href="contact.html">Contact</a></li>
-                      </ul>
-                    </div>
-                  </div>
-
+                     	<ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>Projects</h4></a></li>
+                       	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                       	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
+                      </ul>               
                 </div>
               </div>
-
             </div>
          </div>
       </div>
-
    </nav>
 </div>
-
 
 <!-- Header section
 ================================================== -->
@@ -110,18 +97,49 @@
 <section id="about">
    <div class="container">
       <div class="row">
+         <div class="wow fadeInUp col-md-4 col-sm-5" data-wow-delay="1.3s"><h1>Skills</h1>
+			<h2><p>a/b testing</p>
+			<p>affinity mapping</p>
+			<p>card sorting</p>
+			<p>focus groups</p>
+			<p>heuristic evaluation</p>
+			<p>information architecture</p>
+			<p>user interviews</p>
+			<p>usability testing</p>
+			<p>user research</p>
+			
+			<p>Prototyping</p>
+			<p>Wireframing</p>
+			<p>Voice User Inteface Design</p>
+			<p>Wizard of Oz Methodology</p> </h2>
 
-         <div class="wow fadeInUp col-md-4 col-sm-5" data-wow-delay="1.3s"><h2>
-			<p>A creative problem solver with a curiosity about human behavior. I love working with people and learning what makes them tick. With my background in design, I have a knack for identifying poor user experience. My mission is to create meaningful experiences for a global audience.​</p>
-			<p>A global citizen with awareness of multiple cultures. Originally from New York City, but I have called Copenhagen and San Francisco, home. I speak 4 languages; English, Cantonese, Spanish and Danish.</p>
-			<p>A world traveler who has a thirst for adventure. Aside from user experience, traveling is one of my biggest passions. I love exploring new countries, learning about people from all around the world and picking up new languages. I have explored 39 countries (and counting) and have lived in 2.</p></h2>
-		</div>
+			<h1>Tools</h1>
+			<h2><p>axure</p>
+			<p>balsamiq</p>
+			<p>invision</p>
+			<p>prott</p>
+			<p>sketch</p>
+			<p>lucidchart</p>
+			<p>adobe creative suite</p>
+			<p>keynote</p>
+			<p>microsoft Office</p>
+			<p>HTML & CSS</p>
+			<p>github</p>
+			</h2>
+			</div>
 
 		<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="1.6s">
-		<h1>Testimonials</h1>
-			<p>"<i>Virginia was a great fit with our team from the start. Her clean design aesthetic and attention to detail allowed for a smooth workflow and adherence to tight client deadlines in a fast-paced agency environment. It was a pleasure working with her.</i>" - <b>Jeanine Debar</b></p>
-			<p>"<i>I had the pleasure of working closely with Virginia during our time at DreamIt Ventures. She is creative, proactive, responsible, diligent, and a great personality to have in the office. Although circumstances in the accelerator were tough -- tight deadlines, demanding and wishy-washy clients, limited resources -- Virginia handled every task deftly and with a smile.</i>" - <b>Sharon Paley</b></p>
-			<p>"<i>Virginia has outstanding organizational skills. She does not hesitate to take on new and challenging tasks. She takes initiative and has excellent follow through. She is able to successfully complete multiple tasks with favorable results despite deadline pressures. Virginia has an excellent rapport with people of all ages. Her communication skills, both written and verbal, are excellent.</i>" - <b>Edna Blackwell</b></p>
+		<h1>Biography</h1>
+			<p>A creative problem solver with a curiosity about human behavior. I love working with people and learning what makes them tick. With my background in design, I have a knack for identifying poor user experience. My mission is to create meaningful experiences for a global audience.​</p>
+			<p>A global citizen with awareness of multiple cultures. Originally from New York City, but I have called Copenhagen and San Francisco, home. I speak 4 languages; English, Cantonese, Spanish and Danish.</p>
+			<p>A world traveler who has a thirst for adventure. Aside from user experience, traveling is one of my biggest passions. I love exploring new countries, learning about people from all around the world and picking up new languages. I have explored 39 countries (and counting) and have lived in 2.</p>
+
+			<h1>Testimonials</h1>
+			<p>"<i>Virginia was a great fit with our team from the start. Her clean design aesthetic and attention to detail allowed for a smooth workflow and adherence to tight client deadlines in a fast-paced agency environment. It was a pleasure working with her.</i>" - <b>Jeanine Debar, President at Brandtuitive</b></p>
+			<p>"<i>I had the pleasure of working closely with Virginia during our time at DreamIt Ventures. She is creative, proactive, responsible, diligent, and a great personality to have in the office. Although circumstances in the accelerator were tough -- tight deadlines, demanding and wishy-washy clients, limited resources -- Virginia handled every task deftly and with a smile.</i>" - <b>Sharon Paley, Project Manager at Dreamit Ventures</b></p>
+			<p>"<i>Virginia has outstanding organizational skills. She does not hesitate to take on new and challenging tasks. She takes initiative and has excellent follow through. She is able to successfully complete multiple tasks with favorable results despite deadline pressures. Virginia has an excellent rapport with people of all ages. Her communication skills, both written and verbal, are excellent.</i>" - <b>Edna Blackwell, Executive Assistant at MICA</b></p>
+			<p></p>
+			<H5><p>CV available upon request.</p></H5>
 		</div>
 
 		<div class="clearfix"></div>
