--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--
 
-Template 2082 Pure Mix
-
-http://www.tooplate.com/view/2082-pure-mix
-
--->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,17 +62,11 @@ http://www.tooplate.com/view/2082-pure-mix
               <div class="navicon">
                 <div class="menu-container">
 
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                     	<ul id="nav-menu">
-                         <li><a href="index.html">Home</a></li>
-                       	 <li><a href="about.html">About</a></li>
-                       	 <li><a href="contact.html">Contact</a></li>
+                  
+                     	<ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>PROJECTS</h4></a></li>
+                       	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                       	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
                     </div>
                   </div>
@@ -87,11 +75,8 @@ http://www.tooplate.com/view/2082-pure-mix
               </div>
 
             </div>
+            </nav>
          </div>
-      </div>
-
-   </nav>
-</div>
 
 
 <!-- Header section
