--- a/giveaway.html
+++ b/giveaway.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--
 
-Template 2082 Pure Mix
-
-http://www.tooplate.com/view/2082-pure-mix
-
--->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,17 +62,11 @@ http://www.tooplate.com/view/2082-pure-mix
               <div class="navicon">
                 <div class="menu-container">
 
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                     	<ul id="nav-menu">
-                         <li><a href="index.html">Home</a></li>
-                       	 <li><a href="about.html">About</a></li>
-                       	 <li><a href="contact.html">Contact</a></li>
+                  
+                     	<ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>CASE STUDIES</h4></a></li>
+                       	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                       	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
                     </div>
                   </div>
@@ -87,12 +75,8 @@ http://www.tooplate.com/view/2082-pure-mix
               </div>
 
             </div>
+            </nav>
          </div>
-      </div>
-
-   </nav>
-</div>
-
 
 <!-- Header section
 ================================================== -->
@@ -126,15 +110,40 @@ http://www.tooplate.com/view/2082-pure-mix
 		</div>
 
 		<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="2.6s">
-			<img src="images/giveaway-slides.001.png" class="img-responsive" alt="Single Project">
+		<h1>Free Your Stuff Redesign</h1>
+		<p>This is a redesign of a previous project, Free Your Stuff. 
+Free Your Stuff is a gifting and sharing application where users can give away and receive things at no cost. Think of it like a free pile but it can be accessed within your fingertips! The application needs an update. The icons and colors are outdated and the application lacks ease of accessibility. In order to scrutinize the product with a better understanding of the user pain points and insights, I conducted two methods of research: Heuristic Evaluation and User Reviews Analysis.</p>
 			<img src="images/giveaway-slides.002.png" class="img-responsive" alt="Single Project">
+			<h1>Heuristic Evaluation</h1>
+			<p>After scrutinizing Free Your Stuff, I came to the following conclusion:</p>
 			<img src="images/giveaway-slides.003.png" class="img-responsive" alt="Single Project">
-			<img src="images/giveaway-slides.004.png" class="img-responsive" alt="Single Project">
-			<img src="images/giveaway-slides.005.png" class="img-responsive" alt="Single Project">
+			<p>Overall the UI is outdated, the experience of sharing and gifting is not enjoyable at all. </p>
+			<h1>User Reviews Analysis</h1>
+			<h5>"On the top navigation, I am uncertain what the hand does? I am assuming that in the first two screens this is a hand taking and the last two screens are a hand giving. I like this ideology but it might be in the wrong place. I feel like if there were a logo mark, it should go where the hands are."</h5>
+			<h5>"The colors themselves aren't a huge issue, but the usage/pairing of them in some areas were hard to read. The teal/brown on top of each other was hard to distinguish the copy/icon used."</h5>
+			<h5>"I understand how a user might upload a pic of their item, but I'm not understanding the flow of any other scenario (ie. searching, filtering, obtaining something)."</h5>
+			<h5>"I’m confused on the bottom navigation of what the far left icon is. It looks like a book or notepad? Maybe use a different icon or use a single word with the icon to help it out."</h5>
+			<h5>"The color palette needs to be changed. I would not use light blue type on a grey background, nearly impossible to read. Also, I cannot tell what the pattern is on the splash screen."</h5>
+			<h5>"I can't decipher what the icon is in the middle between 2 icons on top. The icons could be a little bit smaller so there'll be more space for more images. I'm very visual, so I like my photos big .. maybe round the corners off of the frame a little to make it curvy?"</h5>
+
+			<p>Based on the reviews, users find the iconography to be unclear, the color palette needs to be reconsidered. There needs to be more clarity of the application flow. </p>
+			<h1>Problem Statement</h1>
+			<p>Confusing iconography: Ambiguous icons might confuse the user from fully accessing the application. They might not know how to find free items or give away goods or post a wanted listing.</p>
+
+			<p>Lacking color contrast: Clashing colors makes it hard for the user to read the content properly. This disconnects the user from fully accessing the application.</p>
+
+			<p>Unfinished information architecture: The flow is missing a few pieces, it needs to be flushed out more to showcase all the possibilities the user can have within the app.</p> 
+			<h1>User Personas</h1>
+			<p>Understanding the end users are always crucial for problem-solving. A better understanding of users could help better transform the application into a valuable product. User personas are important because they drive the design decisions. Before we proceed to the design stage, we need to remember who we are designing for. </p>
 			<img src="images/giveaway-slides.006.png" class="img-responsive" alt="Single Project">
 			<img src="images/giveaway-slides.007.png" class="img-responsive" alt="Single Project">
+			<h1>Card Sorting</h1>
+			<p>After narrowing down the features to provide on the application, I recruited 5 participants remotely to perform an open card sorting exercise through OptimalWorkshop. From the exercise, I was able to understand their thinking and behavior properly. Participants were asked to sort features into a categories.</p>
 			<img src="images/giveaway-slides.008.png" class="img-responsive" alt="Single Project">
+			<h1>Information Architecture</h1>
+			<p>After completing the card sorting exercise, a site map was created based on the frequencies. The new application will be restructured to be more intuitive for giving and sharing.</p>
 			<img src="images/giveaway-slides.009.png" class="img-responsive" alt="Single Project">
+			<h1>Wireframes</h1>
 			<img src="images/giveaway-slides.010.png" class="img-responsive" alt="Single Project">
 			<img src="images/giveaway-slides.011.png" class="img-responsive" alt="Single Project">
 			<img src="images/giveaway-slides.012.png" class="img-responsive" alt="Single Project">
