--- a/index.html
+++ b/index.html
@@ -61,31 +61,20 @@
 
               <div class="navicon">
                 <div class="menu-container">
-
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                      <ul id="nav-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                    <ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>projectS</h4></a></li>
+                         <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                        <li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
                     </div>
                   </div>
 
                 </div>
               </div>
-
             </div>
+            </nav>
          </div>
-      </div>
-
-   </nav>
-</div>
+  
 
 
 <!-- Header section
@@ -175,7 +164,6 @@
          </div>
 
       </div>
-   </div>
 </section>
 
 <!-- Footer section
