--- a/wanderwords.html
+++ b/wanderwords.html
@@ -62,32 +62,19 @@
               <div class="navicon">
                 <div class="menu-container">
 
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                     	<ul id="nav-menu">
-                         <li><a href="index.html">Home</a></li>
-                       	 <li><a href="about.html">About</a></li>
-                       	 <li><a href="contact.html">Contact</a></li>
+                  
+                     	<ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>projectsS</h4></a></li>
+                       	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                       	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
                     </div>
                   </div>
-
                 </div>
               </div>
-
             </div>
+            </nav>
          </div>
-      </div>
-
-   </nav>
-</div>
-
-
 <!-- Header section
 ================================================== -->
 <section id="header" class="header-two">
@@ -122,16 +109,84 @@
 		<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="2.6s">
 			<p>Wanders Words is a language app that helps users in a pinch when they travel to foreign destinations. Users can look up basic phrases or words while they’re on go. The app provides translations and pronunciations to help users assimilate into local culture.</p>
 			<img src="images/wander-words.001.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.002.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.003.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.004.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.005.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.006.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.007.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.008.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.009.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.010.png" class="img-responsive" alt="Single Project">
-			<img src="images/wander-words.011.png" class="img-responsive" alt="Single Project">
+			<h1>PROBLEM STATEMENT</h1>
+			<p>Users need a way to learn the basics of a foreign language easily and quickly to adapt to local customs. By knowing simple phrases, users can interact with locals in a more meaningful way. </p>
+			<h1>HYPOTHESIS</h1>
+			<p>By creating a language software application that has a flash card feature, a break down of foreign words into english structures, pnemonics and cognates, a translator search feature for basic words and phrases for users, we will help them build the confidence and knowledge she needs to be immersed in the local culture. As a result, users will have no trouble getting around and doing simple daily activities and will be interacting with locals in no time. </p>
+			<p></p>
+			<h1>COMPETITIVE ANALYSIS</h1>
+			<p>A competitive analysis was performed in order to gain a better understanding of current learning apps, what they offer and what they are lacking. This process allowed me to recognize opportunities to meet user needs that are being neglected in the current market.</p>
+			<img src="images/competitors-11.png" class="img-responsive" alt="Single Project">
+			<img src="images/competitors-12.png" class="img-responsive" alt="Single Project">
+			<img src="images/competitors-13.png" class="img-responsive" alt="Single Project">
+			<h1>USER RESEARCH ANALYSIS</h1>
+			<p>Interviews were held to accomplish the following goals: </p>
+			<p>• Observe user behavior toward learning a new language </p>
+			<p>• What challenges do users face when learning a new language </p>
+			<p>• What methods do users take in learning a new language  </p>
+			<p>• Positive and negative experiences in learning a new language </p>
+			<p>• What learning methods do users prefer </p>
+			<img src="images/user-research-analysis-01.png" class="img-responsive" alt="Single Project">
+			<p>INSIGHTS BASED ON AFFINITY MAPPING </p>
+			<p>• Users spend an average of 30 minutes a day learning a new language. </p>
+			<p>• Users who live abroad are more likely to commit to learning the local language. </p>
+			<p>• Users lose motivation for learning after a few months. </p>
+			<p>• Users who live abroad tend to seek for assimilation toward the local culture. </p>
+			<p>• Users learn better through visual cues, pnemonics and practicing pronunciation. </p>
+			<p>• Users wanted to learn practical words that would be used for every day basic needs.</p> 
+			<p>• A reminder would be help users continue the habit of learning a new language. </p>
+			<img src="images/user-research-analysis-02.png" class="img-responsive" alt="Single Project">
+			<h1>USER PERSONAS</h1>
+			<p>Personas were created to maintain a user-centered design. After conducting interviews and analyzing the data, I was able to pinpoint the behaviors, needs and pain points of my target audience</p>
+			<img src="images/user-personas-03.png" class="img-responsive" alt="Single Project">
+			<img src="images/user-personas-04.png" class="img-responsive" alt="Single Project">
+			<img src="images/user-personas-05.png" class="img-responsive" alt="Single Project">
+			<img src="images/user-personas-06.png" class="img-responsive" alt="Single Project">
+			<h1>USER JOURNEYS</h1>
+			<p>User journeys were created to visualize the emotional highs and lows a user experiences while achieving their goal.</p>
+			<img src="images/user-journey.png" class="img-responsive" alt="Single Project">
+			<img src="images/user-journey-01.png" class="img-responsive" alt="Single Project">
+			<h1>USER FLOWS</h1>
+			<p>User flows were created to visualize the overall path a user would take through the app to accomplish a goal.</p>
+			<img src="images/user-flows-07.png" class="img-responsive" alt="Single Project">
+			<img src="images/user-flows-08.png" class="img-responsive" alt="Single Project">
+			<h1>LOW FIDELITY WIREFRAMES</h1>
+			<p>During the initial stages of designing, sketching was essential for quick iterations of ideas and experimentation.</p>
+			<img src="images/low-fidelity-09-09.png" class="img-responsive" alt="Single Project">
+			<h1>MID FIDELITY WIREFRAMES</h1>
+			<p>The sketches were refined with more detail in Balsamiq.</p>
+			<img src="images/wanderwords-mid-fidelity.png" class="img-responsive" alt="Single Project">
+			<h1>USABILITY TESTING</h1>
+			<p>Usability tests were conducted with three participants, two were moderated remotely and one was done in person at the participant’s home. The participants were in the age range of 24 - 28. The sessions ran for roughly 15 minutes. For the remote tests, I used my Macbook Pro and communicated through Skype. I recorded the session through Quicktime Player’s screen record feature. For the test done in person, we used an iPhone 6s plus and I used my iPhone 6s to record the session. Affinity mapping was utilized to analyze the test results. </p>
+			<p>GOAL</p> 
+			<p>The purpose of this study is to access the ease of use within the app. I would like to observe if users can successfully login, search for translations in different categories and navigate around the application. The goal is to ensure the overall usefulness and whether the design needs improvement or not.</p>
+
+			<p>TEST OBJECTIVE </p>
+			<p>• Determine if users understand the app and its usefulness. </p>
+			<p>• Observe how users navigate the app, whether there are any difficulties.  </p>
+			<p>• Observe whether or not users can find the translation they need. </p>
+
+			<p>CONCLUSION </p>
+			<p>Overall users had no issues navigating through each category and looking up translations. However they were confused at the onboarding screens. It wasn’t clear that it was a tutorial and not a home screen. The layout needs to be reevaluated, search bars, go back/X buttons and the type of categories need to be explored further. </p>
+			<h1>TEST REPORT</h1>
+			<img src="images/affinity-usertest-08.png" class="img-responsive" alt="Single Project">
+			<p>All participants were able to complete the task in each scenario. A few issues came about during the test. They are highlighted below. </p>
+			<p>Issue 1: Participants were confused at onboarding screens, they thought it 
+			was the dashboard, they didn’t know it was a tutorial. (High severity) </p>
+			<p>Suggested Change: Modify onboarding screens, make it more visually different from home screen or modify ‘let’s go’ screen so user knows they‘re entering a tutorial.</p>
+			<p>Evidence: Nearly all the users clicked around on onboarding screens until
+			I explained to them it wasn’t a home screen. </p>
+			<p>Issue 2: The language setting is easy to find but can be confused with info 
+			button instead of user/profile button. User’s didn’t like that there wasn’t a 
+			way to go back to language selection when setting up their account.  (Major severity) </p>
+			<p>Suggested Change: Create a separate button for changing language settings for quicker access. </p>
+			<p>Evidence: Users took a while to figure out language setting. </p>
+			<p>Issue 3: Search bar might be redundant on home screen and category screen. (Minor severity) </p>
+			<p>Suggested Change: Reevaluate the types of categories on the app. Narrow down to one search bar so it’s less redundant, possibly remove alphabet category. </p>
+			<p>Evidence: User had no issue navigating in food category but found it superfluous. </p>
+			<p>Issue 4: A few users didn’t like the X button or the lack of a go back button, it created confusion. (Minor severity) </p>
+			<p>Suggested Change: Add go back buttons and remove X buttons. </p>
+			<p>Evidence: Users mentioned a preference to a go back button.</p>
 			<img src="images/wander-words.012.png" class="img-responsive" alt="Single Project">
 			<img src="images/wander-words.013.png" class="img-responsive" alt="Single Project">
 			<img src="images/wander-words.014.png" class="img-responsive" alt="Single Project">
