--- a/virtuoso.html
+++ b/virtuoso.html
@@ -62,31 +62,19 @@
               <div class="navicon">
                 <div class="menu-container">
 
-                  <div class="circle dark inline">
-                    <i class="icon ion-navicon"></i>
-                  </div>
-
-                  <div class="list-menu">
-                    <i class="icon ion-close-round close-iframe"></i>
-                    <div class="intro-inner">
-                     	<ul id="nav-menu">
-                         <li><a href="index.html">Home</a></li>
-                       	 <li><a href="about.html">About</a></li>
-                       	 <li><a href="contact.html">Contact</a></li>
+                 
+                     	<ul class="nav navbar-nav navbar-right">
+                         <li><a href="index.html"><h4>projectS</h4></a></li>
+                       	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
+                       	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
                     </div>
                   </div>
-
                 </div>
               </div>
-
             </div>
+            </nav>
          </div>
-      </div>
-
-   </nav>
-</div>
-
 
 <!-- Header section
 ================================================== -->
@@ -123,19 +111,91 @@
 			<p>Virtuoso is a self improvement application that allows users to obtain advice for any questions or concerns they have. The application provides articles and forums for users to acquire information. One of the key features of Virtuoso is the opportunity to connect with a certified expert via video call or messaging.</p>
 			<img src="images/virtuoso-screens.jpg" class="img-responsive" alt="Single Project">
 			<img src="images/virtuoso-expert-screens-grey-01.jpg" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.002.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.003.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.004.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.005.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.006.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.007.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.008.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.009.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.010.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.011.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.012.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.013.png" class="img-responsive" alt="Single Project">
-			<img src="images/portfolio-online-behance-01.014.png" class="img-responsive" alt="Single Project">
+			<h1>PROBLEM STATEMENT</h1>
+			<p>I have observed that there is a lack of an app that caters to advice seekers on a personal and professional level. Users need a way to find help in whatever obstacle they have in the quickest and most efficient way. Search engines are insufficient.</p>
+			<h1>HYPOTHESIS</h1>
+			<p>We will know this to be true when there are infinite questions being replied to in the most professional manner and video calls with experts increasing in demand on the daily.</p>
+			<p></p>
+			<h1>COMPETITIVE ANALYSIS</h1>
+			<p>Through a competitive analysis, Quora and Stack Exchange were identified as potential competitors. By using a SWOT profile, I was able to identify the advantages and flaws of each competitor.</p>
+			<img src="images/swot-02.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/swot-05.jpg" class="img-responsive" alt="Single Project">
+			<h1>USER RESEARCH ANALYSIS</h1>
+			<p>Interviews were held to accomplish the following goals: </p>
+			<p>• Identify possible procedures a user takes for seeking expert advice. </p>
+			<p>• Gather opinions on how users feel about Quora, Reddit and other  similar platforms.</p>
+			<p>• Observe user behavior toward search engines. </p>
+			<p>• Identify what type of knowledge or advice users seek. </p>
+			<p>• Observe how often users seek advice.  </p>
+			<p>• Observe why users seek advice. </p>
+			<img src="images/stickies.jpg" class="img-responsive" alt="Single Project">
+			<p></p>
+			<p>INSIGHTS BASED ON AFFINITY MAPPING </p>
+			<p>• Users have search needs on a daily basis.</p>
+			<p>• Google is the most commonly used search engine.</p>
+			<p>• Users find Google simple and easy to use. </p>
+			<p>• Users seek an expert for advice every two weeks.</p>
+			<p>• Users turn to LinkedIn to provide credited experts.</p>
+			<p>• Most of the search purposes are work related or general knowledge.</p> 
+			<p>• Users don’t like tutorials and how to videos when they’re long winded or superfluous. </p>
+			<p>• Users find Google to have better search optimization compared to other search engines.</p>
+			<p>• Users enjoy tutorials and how to videos when they are direct, straight to the point and helpful. </p>
+			<p>• Users enjoy using Reddit because of the online community, it’s filled with real every day people who can relate to the user. </p>
+			<p>• Users are not inclined to pay a high amount for video calls with an expert unless the answer cannot be found on the internet.</p>
+			<p>• User intuitive platform is important even for web use. </p>
+			<p>• There should be options to turn off filters when viewing answers on Q&A platforms. </p>
+			<p>• Providing a free or low cost service would be the best way to draw in users during the beginning stage. </p>
+			<p>• Creating a points reward system for gift card redemption could be a way to draw in users.</p>
+			<h1>USER PERSONAS</h1>
+			<p>Personas were created to represent the goals and behaviors of my target audience. 
+			It allowed me to maintain a user-centered design.</p>
+			<img src="images/user-personas-01.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-personas-02.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-personas-03.jpg" class="img-responsive" alt="Single Project">
+			<h1>USER JOURNEYS</h1>
+			<p>User journey maps were created for each persona. They provide a visualization of each user's emotional highs and lows and thought process in completing a task. </p>
+			<img src="images/user-journey-02.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-journey-03.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-journey-04.jpg" class="img-responsive" alt="Single Project">
+			<h1>USER FLOWS</h1>
+			<p>User flows were created from each journey map. Each user flow illustrates how users would complete a task step by step.  This determines what features need to be included in the product. </p>
+			<img src="images/user-flows-05.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-flows-06.jpg" class="img-responsive" alt="Single Project">
+			<img src="images/user-flows-07.jpg" class="img-responsive" alt="Single Project">
+			<h1>INFORMATION ARCHITECTURE</h1>
+			<p>The site map was the blueprint for the initial creation of the app. It illustrates all possible interactions users can have within the app, and provides an overview of necessary screens. Optimal Workshop was used for refining the architecture in the app through a hybrid card sorting exercise. A test was conducted with 9 participants who provided helpful suggestions for organizing data. </p>
+			<img src="images/sitemap.png" class="img-responsive" alt="Single Project">
+			<h1>LOW FIDELITY WIREFRAMES</h1>
+			<p>Rough sketches were made during the initial design process. The following screens were created: Introduction, Sign Up, Log In, LinkedIn pop up, User Selection, Onboarding, Dashboard, Appointments, Profile, Notifications and Settings. </p>
+			<img src="images/low-fidelity-01.jpg" class="img-responsive" alt="Single Project">
+			<h1>MID FIDELITY WIREFRAMES</h1>
+			<p>The sketches were transformed into mid fidelity wireframes through Balsamiq. 
+			The new wireframes are refined with more detail.</p>
+			<img src="images/low-fidelity.png" class="img-responsive" alt="Single Project">
+			<h1>HIGH FIDELITY WIREFRAMES</h1>
+			<p>The first set of high fidelity wireframes were made through Sketch. It was a refined version of the mid fidelity wireframes. Invision was used to create the first prototype for user testing.</p>
+			<img src="images/high-fidelity-wireframes-01.jpg" class="img-responsive" alt="Single Project">
+			<h1>USABILITY TESTING</h1>
+			<p>Usability tests were conducted with six participants, five were moderated remotely and one was done in person at the participant’s home. Most of the participants were in the age range of 21 - 25, one was over 40 and another was in the range of 26 - 30. Most of the sessions ran from 20 - 25 minutes. The longest session was almost an hour. For the remote tests, I used my MacBook Pro and communicated through Skype. I recorded the session through Quicktime Player’s screen record feature. For the test done in person, we used an iPhone 6s plus and I used my iPhone 6s to record the session. Affinity mapping and rainbow spreadsheet methods were utilized to analyze the test results. </p>
+			<p>GOAL</p> 
+			<p>The purpose of this study is to access the ease of use within  the app. I would like to observe if users can successfully locate  forums, search for articles, and most importantly, know how to  contact experts and schedule calls. The goal is to ensure the  overall usefulness and whether the design needs  improvement or not.</p>
+
+			<p>TEST OBJECTIVE </p>
+			<p>• Determine if users understand the app and its usefulness.</p>
+			<p>• Observe how users navigate the app, whether there are any  difficulties.</p>
+			<p>• Observe whether or not users can contact an expert through  the app. </p>
+			<p>• Observe whether or not users understand the search function  and the forum feature.</p>
+			<img src="images/virtuoso-affinity.png" class="img-responsive" alt="Single Project">
+			<p>CONCLUSION </p>
+			<p>Overall the test went pretty well. I received a great amount of feedback which gave me better direction on where to take the app. All the users found the navigation to be pretty straight forward. The experience seems to be mostly positive. Once I add one more screen and tweak around the visual elements and content, the user experience will be much more smoother.</p>
+			<h1>A/B PREFERENCE TESTING</h1>
+			<p>After the usability testing, I needed to experiment with the navigation structure and typography sizing of the app. A preference test was conducted with 20 users. The goal was to find out which version participants preferred and to find out the reasoning behind their choices. Based on the results of the test, I would decide which screen I would move forward with.</p>
+			<p>Results</p>
+			<p>A total of 20 participants took the preference test. 11 out of 20 preferred design 2 which equated to 55% of the participants. It was a pretty close call. According to UsabilityHub, the difference isn’t statistically significant.</p>
+			<p>Conclusion</p>
+			<p>Since the results were such a close call, I will be taking feedback from both sides to make a new dashboard. The new design will include the positive feedback of both designs. I will include the text layout of the design 2 but include the icons and navigation bar of design 1 into the new design.</p>
+			<h1>STYLE GUIDE</h1>
+			<img src="images/style-guide-03.jpg" class="img-responsive" alt="Single Project">
 			<img src="images/portfolio-online-behance-01.015.png" class="img-responsive" alt="Single Project">
 			<img src="images/portfolio-online-behance-01.016.png" class="img-responsive" alt="Single Project">
 			<img src="images/portfolio-online-behance-01.017.png" class="img-responsive" alt="Single Project">
