--- a/wanderwords.html
+++ b/wanderwords.html
@@ -64,7 +64,7 @@
 
                   
                      	<ul class="nav navbar-nav navbar-right">
-                         <li><a href="index.html"><h4>projectsS</h4></a></li>
+                         <li><a href="index.html"><h4>projects</h4></a></li>
                        	 <li><a href="about.html"><h4>ABOUT</h4></a></li>
                        	<li> <a href="contact.html"><h4>CONTACT</h4></a></li>
                       </ul>
