--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Bio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -208,7 +208,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; Copyright by Virginia Yu</p>
+						<p><small>&copy; Copyright by Virginia Yu</small></p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://twitter.com/MlSSYU"><i class="icon-twitter"></i></a>
@@ -225,11 +225,10 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+				</div>
 		</footer>
 
 	</div>
-
 	</body>
 </html>
 
