--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>V I R G I N I A</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
 
   	<!-- Facebook and Twitter integration -->
@@ -93,14 +93,14 @@
 			<ul>
 				<li class="animate-box fh5co-active"><a href="index.html" class="transition">Home</a></li>
 				<li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
-		</nav>
+		</ul></nav>
 		
 		<header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
 						<h1>Virginia </h1>
-						<h2>user experience design & research</a></h2>
+						<h2>user experience design & research</h2>
 					</div>
 				</div>
 			</div>
@@ -200,7 +200,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; Copyright by Virginia Yu</p>
+						<p><small>&copy; Copyright by Virginia Yu</small></p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://twitter.com/MlSSYU"><i class="icon-twitter"></i></a>
@@ -219,12 +219,7 @@
 				</div>
 			</div>
 		</footer>
-
 	</div>
-	
-			
-	
-
 	</body>
 </html>
 
