--- a/recipebuddy.html
+++ b/recipebuddy.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>R E C I P E B U D D Y</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
 
   	<!-- Facebook and Twitter integration -->
