--- a/virtuoso.html
+++ b/virtuoso.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>V I R T U O S O</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
   
   	<!-- Facebook and Twitter integration -->
@@ -166,7 +166,6 @@
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 5</span>User Research Analysis</h3>
 							</div>
 							<div class="col-md-9">
-
 								<p>	Interviews were held to accomplish the following goals: </p>
 								<ul class="fh5co-list-style-1 fh5co-inline">
 								<li>Identify possible procedures a user takes for seeking expert advice.</li>
@@ -196,6 +195,7 @@
 								<li>There should be options to turn off filters when viewing answers on Q&A platforms. </li>
 								<li>Providing a free or low cost service would be the best way to draw in users during the beginning stage. </li>
 								<li>Creating a points reward system for gift card redemption could be a way to draw in users.</li>
+								</ul>
 								</ul>
 							</div>
 						</div>	
@@ -329,9 +329,6 @@
 							</div>
 						</div>
 
-
-
-
 						<div class="row animate-box row-bottom-padded-sm">
 							<div class="col-md-3">
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 15</span> More Projects</h3>
@@ -355,14 +352,8 @@
 								</div>
 							</div>
 						</div>
-
-
-
 					</div>
 				</div> 
-
-	
-
 			</div>
 		</div>
 
@@ -370,7 +361,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; Copyright by Virginia Yu</p>
+						<p><small>&copy; Copyright by Virginia Yu</small></p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://twitter.com/MlSSYU"><i class="icon-twitter"></i></a>
@@ -389,11 +380,7 @@
 				</div>
 			</div>
 		</footer>
-
 	</div>
-
-
-
 	</body>
 </html>
 
