--- a/wanderwords.html
+++ b/wanderwords.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>W A N D E R W O R D S</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -172,7 +172,7 @@
 								<li>What challenges do users face when learning a new language </li>
 								<li>What methods do users take in learning a new language  </li>
 								<li>Positive and negative experiences in learning a new language </li>
-								<li>What learning methods do users prefer </li><p></p>
+								<li>What learning methods do users prefer </li><p></p></ul>
 								<img src="images/user-research-analysis-01.jpg" class="img-responsive" alt="Single Project">
 								<p></p>
 								
@@ -318,12 +318,8 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div> 
-
-	
-
 			</div>
 		</div>
 
@@ -331,7 +327,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; Copyright by Virginia Yu</p>
+						<p><small>&copy; Copyright by Virginia Yu</small></p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://twitter.com/MlSSYU"><i class="icon-twitter"></i></a>
@@ -350,11 +346,7 @@
 				</div>
 			</div>
 		</footer>
-
 	</div>
-
-
-
 	</body>
 </html>
 
