--- a/giveaway.html
+++ b/giveaway.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>G I V E A W A Y</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="user experience design & user researcher" />
-	<meta name="keywords" content="user experience design and user research" />
-	<meta name="author" content="virginia" />
+	<meta name="description" content="user experience designer & user researcher" />
+	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
+	<meta name="author" content="Virginia" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -267,10 +267,8 @@ Free Your Stuff is a gifting and sharing application where users can give away a
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div> 
-
 			</div>
 		</div>
 
@@ -278,7 +276,7 @@ Free Your Stuff is a gifting and sharing application where users can give away a
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; Copyright by Virginia Yu</p>
+						<p><small>&copy; Copyright by Virginia Yu</small></p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://twitter.com/MlSSYU"><i class="icon-twitter"></i></a>
@@ -297,11 +295,7 @@ Free Your Stuff is a gifting and sharing application where users can give away a
 				</div>
 			</div>
 		</footer>
-
 	</div>
-
-
-
 	</body>
 </html>
 
