updated about link
updated about link

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Bio</title>
+	<title>A B O U T  M E</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="user experience designer & user researcher" />
 	<meta name="keywords" content="user experience design, ux design, virginia yu, user research" />
@@ -90,7 +90,7 @@
 		<nav id="fh5co-nav" role="navigation">
 			<ul>
 				<li class="animate-box"><a href="index.html" class="transition">Home</a></li>
-				<li class="animate-box fh5co-active"><a href="about.html" class="transition">Bio</a></li>
+				<li class="animate-box fh5co-active"><a href="about.html" class="transition">About Me</a></li>
 			</ul>
 		</nav>
 		<header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
