--- a/virtuoso.html
+++ b/virtuoso.html
@@ -91,7 +91,7 @@
 		<nav id="fh5co-nav" role="navigation">
 			<ul>
 				<li class="animate-box"><a href="index.html" class="transition">Home</a></li>
-				<li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
+				<li class="animate-box"><a href="about.html" class="transition">About Me</a></li>
 			</ul>
 		</nav>
 		<header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
